@@ -26,6 +26,10 @@
   <properties>
     <openjdk-orb.jar>${settings.localRepository}/org/jboss/openjdk-orb/openjdk-orb/${version.org.jboss.openjdk-orb}/openjdk-orb-${version.org.jboss.openjdk-orb}.jar</openjdk-orb.jar>
     <idlj.boot.args>-Xbootclasspath/p:${openjdk-orb.jar}</idlj.boot.args>
+    <java.corba.patch.name>idlj.java.corba.patch</java.corba.patch.name>
+    <java.corba.patch.jar>${project.build.directory}/dependency/${java.corba.patch.name}-${project.version}.jar</java.corba.patch.jar>
+    <idlj.jdk9.args/>
+    <jacorb.jdk9.args/>
   </properties>
 
   <build>
@@ -68,7 +72,11 @@
         <executions>
           <execution>
             <id>default-test</id>
-            <configuration>
+            <phase>test</phase>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <configuration combine.self="override">
               <skip>true</skip>
             </configuration>
           </execution>
@@ -137,6 +145,121 @@
   
   <profiles>
     <profile>
+      <id>j9</id>
+        <activation>
+          <jdk>[1.9,)</jdk>
+        </activation>
+
+      <properties>
+        <version.org.jacorb.jacorb>3.7</version.org.jacorb.jacorb>
+        <version.compiler.plugin>3.6.0</version.compiler.plugin>
+      </properties>
+
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.narayana.jts</groupId>
+          <artifactId>${java.corba.patch.name}</artifactId>
+          <version>${project.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.jacorb</groupId>
+          <artifactId>jacorb-omgapi</artifactId>
+          <version>${version.org.jacorb.jacorb}</version>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>copy-dependencies</id>
+                <phase>process-resources</phase>
+                <goals>
+                  <goal>copy</goal>
+                </goals>
+                <configuration>
+                  <artifactItems>
+                    <artifactItem>
+                      <groupId>org.jboss.narayana.jts</groupId>
+                      <artifactId>${java.corba.patch.name}</artifactId>
+                      <version>${project.version}</version>
+                      <type>${project.packaging}</type>
+                    </artifactItem>
+                    <artifactItem>
+                      <groupId>org.jacorb</groupId>
+                      <artifactId>jacorb-omgapi</artifactId>
+                      <type>jar</type>
+                      <overWrite>false</overWrite>
+                      <outputDirectory>${project.basedir}/target/java9-jacorb</outputDirectory>
+                    </artifactItem>
+                  </artifactItems>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>jts-jacorb-jdk9</id>
+      <activation>
+        <property>
+          <name>!jacorb-disabled</name>
+        </property>
+        <jdk>[1.9,)</jdk>
+      </activation>
+      <properties>
+        <jacorb.jdk9.args>
+          --add-modules java.corba
+          --patch-module java.corba=${project.build.directory}/java9-jacorb/jacorb-omgapi-${version.org.jacorb.jacorb}.jar
+          --add-exports=java.corba/org.omg.CORBA_2_5=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.CONV_FRAME=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.CSIIOP=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.ETF=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.GIOP=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.PortableGroup=ALL-UNNAMED
+          --add-exports=java.corba/org.omg.SSLIOP=ALL-UNNAMED
+        </jacorb.jdk9.args>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>jacorb-compile</id>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+                <configuration>
+                  <compilerArgs>
+                    <arg>--add-modules</arg>
+                    <arg>java.corba</arg>
+                  </compilerArgs>
+                </configuration>
+              </execution>
+              <execution>
+                <id>jacorb-testCompile</id>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+                <configuration>
+                  <compilerArgs>
+                    <arg>--add-modules</arg>
+                    <arg>java.corba</arg>
+                  </compilerArgs>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>jts-jacorb</id>
       <activation>
         <property>
@@ -179,6 +302,7 @@
                 <configuration>
                   <excludes>
                     <exclude>**/javaidl/**</exclude>
+                    <exclude>**/ibmorb/**</exclude>
                   </excludes>
                 </configuration>
               </execution>
@@ -207,23 +331,23 @@
                   <goal>test</goal>
                 </goals>
                 <configuration>
-                  <skip>false</skip>
+                  <argLine>${jacorb.jdk9.args}</argLine>
+                  <reportsDirectory>${project.build.directory}/jacorb-surefire-reports</reportsDirectory>
                   <systemProperties combine.children="append"/>
                   <excludes>
-                    <!-- exclude tests which we don't want to run -->
                     <exclude>**/initialisation/postinit/**</exclude>
                     <exclude>**/initialisation/postset/**</exclude>
                     <exclude>**/initialisation/preinit/**</exclude>
                     <exclude>**/initialisation/TestAttributeCallback.java</exclude>
                     <exclude>**/SimpleObjectImpl.java</exclude>
                     <exclude>**/TestAttributeCallback.java</exclude>
-                    <!-- these ones need fixing -->
                     <exclude>**/PropertyInitTest.java</exclude>
                     <exclude>**/PropertyInitTest3.java</exclude>
                   </excludes>
                   <classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl:test-jar</classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:idlj-idl-tests:test-jar</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:ibmorb-idl:test-jar</classpathDependencyExcludes>
                   </classpathDependencyExcludes>
@@ -234,7 +358,55 @@
         </plugins>
       </build>
     </profile>
-
+    <profile>
+      <id>jts-idlj-jdk9</id>
+      <activation>
+        <property>
+          <name>!idlj-disabled</name>
+        </property>
+        <jdk>[1.9,)</jdk>
+      </activation>
+      <properties>
+        <idlj.jdk9.args>--add-modules java.corba</idlj.jdk9.args>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>idlj-compile</id>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+                <configuration>
+                  <compilerArgs>
+                    <arg>--add-modules</arg>
+                    <arg>java.corba</arg>
+                    <arg>--patch-module</arg>
+                    <arg>java.corba=${java.corba.patch.jar}</arg>
+                    <arg>--add-exports</arg>
+                    <arg>java.corba/com.sun.corba.se=ALL-UNNAMED</arg>
+                  </compilerArgs>
+                </configuration>
+              </execution>
+              <execution>
+                <id>idlj-testCompile</id>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+                <configuration>
+                  <compilerArgs>
+                    <arg>--add-modules</arg>
+                    <arg>java.corba</arg>
+                  </compilerArgs>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>jts-idlj</id>
       <activation>
@@ -251,9 +423,8 @@
         </dependency>
         <dependency>
           <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>idlj-idl</artifactId>
+          <artifactId>idlj-idl-tests</artifactId>
           <version>${project.version}</version>
-          <type>test-jar</type>
           <scope>test</scope>
         </dependency>
       </dependencies>
@@ -271,6 +442,7 @@
                 <configuration>
                   <excludes>
                     <exclude>**/jacorb/**</exclude>
+                    <exclude>**/ibmorb/**</exclude>
                   </excludes>
                 </configuration>
               </execution>
@@ -299,10 +471,10 @@
                   <goal>test</goal>
                 </goals>
                 <configuration>
-                  <skip>false</skip>
+                  <argLine>${idlj.jdk9.args}</argLine>
+                  <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
                   <systemProperties combine.children="append" />
                   <excludes>
-                    <!-- exclude tests which we don't want to run -->
                     <exclude>**/common/**</exclude>
                     <exclude>**/initialisation/postinit/**</exclude>
                     <exclude>**/initialisation/postset/**</exclude>
@@ -310,11 +482,9 @@
                     <exclude>**/initialisation/TestAttributeCallback.java</exclude>
                     <exclude>**/SimpleObjectImpl.java</exclude>
                     <exclude>**/TestAttributeCallback.java</exclude>
-                    <!-- these ones need fixing -->
                     <exclude>**/PropertyInitTest.java</exclude>
                     <exclude>**/PropertyInitTest3.java</exclude>
                   </excludes>
-                  <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
                   <classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
@@ -327,6 +497,56 @@
                     <OrbPortabilityEnvironmentBean.poaImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.oa.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.poaImpleClassName>
                     <OrbPortabilityEnvironmentBean.orbDataClassName>com.arjuna.orbportability.internal.orbspecific.versions.javaidl_1_4</OrbPortabilityEnvironmentBean.orbDataClassName>
                   </systemPropertyVariables>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>jts-openjdk-jdk9</id>
+      <activation>
+        <property>
+          <name>!openjdk-disabled</name>
+        </property>
+        <jdk>[1.9,)</jdk>
+      </activation>
+      <properties>
+        <idlj.jdk9.args>--add-modules java.corba</idlj.jdk9.args>
+        <idlj.boot.args>--patch-module java.corba=${openjdk-orb.jar}</idlj.boot.args>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>idlj-compile</id>
+                <goals>
+                  <goal>compile</goal>
+                </goals>
+                <configuration>
+                  <compilerArgs>
+                    <arg>--add-modules</arg>
+                    <arg>java.corba</arg>
+                    <arg>--patch-module</arg>
+                    <arg>java.corba=${java.corba.patch.jar}</arg>
+                    <arg>--add-exports</arg>
+                    <arg>java.corba/com.sun.corba.se=ALL-UNNAMED</arg>
+                  </compilerArgs>
+                </configuration>
+              </execution>
+              <execution>
+                <id>idlj-testCompile</id>
+                <goals>
+                  <goal>testCompile</goal>
+                </goals>
+                <configuration>
+                  <compilerArgs>
+                    <arg>--add-modules</arg>
+                    <arg>java.corba</arg>
+                  </compilerArgs>
                 </configuration>
               </execution>
             </executions>
@@ -351,9 +571,8 @@
         </dependency>
         <dependency>
           <groupId>org.jboss.narayana.jts</groupId>
-          <artifactId>idlj-idl</artifactId>
+          <artifactId>idlj-idl-tests</artifactId>
           <version>${project.version}</version>
-          <type>test-jar</type>
           <scope>test</scope>
         </dependency>
       </dependencies>
@@ -371,6 +590,7 @@
                 <configuration>
                   <excludes>
                     <exclude>**/jacorb/**</exclude>
+                    <exclude>**/ibmorb/**</exclude>
                   </excludes>
                 </configuration>
               </execution>
@@ -393,17 +613,15 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <executions>
               <execution>
-                <id>surefire-idlj</id>
+                <id>surefire-idlj-openjdk</id>
                 <phase>test</phase>
                 <goals>
                   <goal>test</goal>
                 </goals>
                 <configuration>
-                  <argLine>${idlj.boot.args}</argLine>
-                  <skip>false</skip>
+                  <argLine>${idlj.jdk9.args} ${idlj.boot.args}</argLine>
                   <systemProperties combine.children="append" />
                   <excludes>
-                    <!-- exclude tests which we don't want to run -->
                     <exclude>**/common/**</exclude>
                     <exclude>**/initialisation/postinit/**</exclude>
                     <exclude>**/initialisation/postset/**</exclude>
@@ -411,11 +629,10 @@
                     <exclude>**/initialisation/TestAttributeCallback.java</exclude>
                     <exclude>**/SimpleObjectImpl.java</exclude>
                     <exclude>**/TestAttributeCallback.java</exclude>
-                    <!-- these ones need fixing -->
                     <exclude>**/PropertyInitTest.java</exclude>
                     <exclude>**/PropertyInitTest3.java</exclude>
                   </excludes>
-                  <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
+                  <reportsDirectory>${project.build.directory}/idlj-openjdk-surefire-reports</reportsDirectory>
                   <classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
                     <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
@@ -472,6 +689,7 @@
                 <configuration>
                   <excludes>
                     <exclude>**/jacorb/**</exclude>
+                    <exclude>**/javaidl/**</exclude>
                   </excludes>
                 </configuration>
               </execution>
@@ -500,10 +718,8 @@
                   <goal>test</goal>
                 </goals>
                 <configuration>
-                  <skip>false</skip>
                   <systemProperties combine.children="append" />
                   <excludes>
-                    <!-- exclude tests which we don't want to run -->
                     <exclude>**/common/**</exclude>
                     <exclude>**/initialisation/postinit/**</exclude>
                     <exclude>**/initialisation/postset/**</exclude>
@@ -511,7 +727,6 @@
                     <exclude>**/initialisation/TestAttributeCallback.java</exclude>
                     <exclude>**/SimpleObjectImpl.java</exclude>
                     <exclude>**/TestAttributeCallback.java</exclude>
-                    <!-- these ones need fixing -->
                     <exclude>**/PropertyInitTest.java</exclude>
                     <exclude>**/PropertyInitTest3.java</exclude>
                   </excludes>
