@@ -67,13 +67,6 @@
 	</licenses>
 	<build>
 		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
-				</configuration>
-			</plugin>
 <!--
 			<plugin>
 				<groupId>com.google.code.maven-replacer-plugin</groupId>
@@ -195,4 +188,15 @@
             <scope>test</scope>
         </dependency>
 	</dependencies>
+    <profiles>
+        <profile>
+            <id>j9</id>
+            <activation>
+                <jdk>[1.9,)</jdk>
+            </activation>
+            <properties>
+                <jvm.args.jdk9>--add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED</jvm.args.jdk9>
+            </properties>
+        </profile>
+    </profiles>
 </project>
